# agentic-rag-knowledge-graph

./: .dockerignore  .env.example  .env.production  .gitignore  .uvrc  AGENT_OS_SETUP.md  AGENT_OS_STATUS.md  CLOUD_SETUP_EXPLANATION.md  CUSTOMIZATION_PATTERNS.md  CUSTOMIZATION_PLANNING.md  Dockerfile  FINAL_IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MEDICAL_DOMAIN_ANALYSIS.md  MEDICAL_IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  Procfile  README.md  VERCEL_PRICING_BREAKDOWN.md  bun.lockb  deploy_neon_schema.py  docker-compose.yml  docker-entrypoint.sh  env.txt  neon_verification_20250811_225215.json  neon_verification_20250812_153812.json  neon_verification_20250812_154116.json  neon_verification_20250812_154248.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  railway.toml  requirements-clean.txt  requirements.txt  response_chrome.md  run_backend.py  run_ingest_skip_graph.py  schema_analysis_report.json  (+3 more)
.agent-os/: AGENT_OS_NAVIGATION_GUIDE.md  FINAL_PROJECT_SUMMARY.md  milestone-3-completion-report.md  milestone-4-completion-report.md  project-status.md
.agent-os/product/: ARCHITECTURE.md  DECISIONS.md  MEDICAL_RAG_SYSTEM_SPECIFICATION.md  OPERATIONS.md  README.md  ROADMAP.md  UI_FRONTEND_SPECIFICATION.md  context.yml  mission-lite.md  mission.md  tech-stack.md
.agent-os/specs/: .date-check
.cursor/rules/: analyze-product.mdc  create-spec.mdc  execute-tasks.mdc  plan-product.mdc
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  cloud-shared-test-suite.yml  cloud-tests.yml  dependency-updates.yml  security.yml  staging-deploy.yml  staging-smoke.yml
agent/: agent.py  api.py  cache_manager.py  db_utils.py  graph_utils.py  models.py  monitoring.py  prompts.py  providers.py  tools.py
docs/: CLOUD_ENV_SETUP.md  PERFORMANCE_MONITORING_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md
fisio_rag_saas/accounts/: models.py
fisio_rag_saas/config/: asgi.py  settings.py  urls.py  wsgi.py
fisio_rag_saas/medical_content/: apps.py  models.py
fisio_rag_saas/rag_engine/: apps.py  models.py
frontend/: .env.example  .env.production.example  bun.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts
frontend/scripts/: smoke_test.mjs
frontend/src/: index.css
ingestion/: chunker.py  docx_processor.py  embedder.py  graph_builder.py  incremental_manager.py  ingest.py  optimized_pipeline.py  section_recovery_manager.py  streaming_docx_processor.py
load_testing/: INSTALL.md  README.md  __init__.py  config.py  database_stress_test.py  locustfile.py  performance_monitor.py  requirements.txt  run_scalability_tests.py  test_orchestrator.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
monitoring/: docker-compose.monitoring.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml  recording_rules.yml
pg-vector/: readme.txt
scripts/: check_graph_episodes.py  deploy_section_tracking.py  deploy_verify_neon_env.py  ingest_sample_and_validate.cmd  ingest_server_production.cmd  prepare_neo4j_aura.py  railway_set_secrets.ps1  reset_db_windows.cmd  run_cloud_ingestion.cmd  run_cloud_tests.cmd  run_deploy_neon_env.py  run_e2e_override.py  run_ingest_no_graph.py  run_ingest_single_full.py  run_ingestion_with_env.py  run_tests_with_env.py  run_verify_neon_env.py  schema_analysis.py  schema_analysis_report.json  system_e2e_check_windows.cmd  test_neo4j_connectivity.py  test_performance_optimizations.py  validate_requirements.py  verify_ingestion_status.py  verify_neon_schema.py
security/: README.md  __init__.py  compliance_checker.py  run_security_audit.py  security_config.py  security_middleware.py  vulnerability_scanner.py
security/reports/: security_config_20250808_122725.json
sql/: DATABASE_ARCHITECTURE_EXPLAINED.md  SCHEMA_ANALYSIS_RESULTS.md  SCHEMA_MIGRATION_GUIDE.md  schema.sql  schema_consolidated.sql  schema_with_auth.sql  section_tracking_schema.sql
tests/: conftest.py  run_comprehensive_tests.py
tests/agent/: test_cache_statistics.py  test_db_utils.py  test_document_chunks_fallback.py  test_performance_monitoring.py  test_rag_metrics_tracking.py  test_sse_streaming_endpoint.py  test_stored_procedure_fallback.py  test_system_metrics.py  test_tenant_isolation_logging.py  test_tools_vector_hybrid.py
tests/comprehensive/: README.md  __init__.py  conftest.py  test_database_connections.py  test_documentation_accuracy.py  test_graph_client.py  test_ingestion_pipeline.py  test_query_operations.py  test_runner.py  test_schema_analysis.py  test_schema_consolidated_validation.py
tests/ingestion/: test_docx_ingestion_to_postgres.py  test_embedder_offline.py  test_entity_extraction.py  test_graph_builder_tenant.py
tests/post_ingestion/: README.md  conftest.py  run_verification.py  test_neo4j_ingestion.py  test_postgres_ingestion.py
tests/system/: README.md  __init__.py  run_all_tests.py  test_api_health_endpoints.py  test_complete_integration.py  test_end_to_end.py  test_infrastructure.py  (+11 more)
tmp_ingest_medical/: 02-Gestione del trauma implicazioni per la riabilitazione - TM GINOCCHIO ANCA.docx
(+151 files in other folders)
